Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2148,6 +2148,7 @@ input, select, textarea {
 			display: block;
 			margin: 0 0 2em 0;
 			width: 100%;
+			height: auto;
 		}
 
 			.image.fit img {
